# doc-gpt

./: .dockerignore  .env.model  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  fly.toml  manage.py  package-lock.json  package.json  pyproject.toml  startup.sh  supabase_test.ipynb  tailwind.config.js
.ipynb_checkpoints/: supabase_test-checkpoint.ipynb
aidoc/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
aidoc/static_files/: preline.js  tailwind-build.css
api/: urls.py
api/ai-doc/: Altera fazenda.bru  Cria fazenda.bru  Exclui culturas.bru  Exclui fazenda.bru  Lista fazendas.bru  Query.bru  Resumo culturas.bru  Resumo estados.bru  Resumo.bru  bruno.json
api/ai-doc/environments/: local.bru  produção.bru
api/serializers/: query_serializers.py
api/views/: __init__.py  query.py
core/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_topic_question_document.py  0003_question_cost.py  0004_alter_question_options_document_base_name.py  0005_user_preferred_language_user_query_balance.py  0006_alter_user_preferred_language.py  0007_user_doc_balance_alter_document_file.py  0008_alter_document_file.py  0009_documentbody.py  0010_remove_document_file.py  0011_document_status.py  0012_alter_document_status.py  0013_alter_document_status.py  0014_question_user_topic_publish_user_query_credits_and_more.py  0015_auto_20240409_1220.py  0016_topicinvitesent.py  0017_topic_type.py  0018_remove_user_doc_balance_alter_topic_type.py  0019_document_summary.py  0020_topic_vector_db_alter_document_status.py
core/templates/: base.html  delete_topic.html  documents.html  history.html  index.html  land.html  login.html  main.html  new_topic.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_sent.html  profile.html  qa.html  query.html  register.html  signin.html  start.html  step.html  topic.html  topic_header.html
core/templates/email/: email_topic_invite  email_topic_invite.html
core/templates/partials/: chat.html  chat_detail.html  doc_detail.html  documents.html  list_documents.html  publish.html  query.html  stripe.html  topic_header.html
core/utils/: QdrantManager.py  QueryManager.py  mail_invite.py  qdrant_manager.py  qdrant_memory.py  query_manager.py  supabase_manager.py  text_extractor.py  vectordb_factory.py  vectordb_manager.py
